# Rasterizer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/lib/: CMakeLists.txt
src/lib/auxillary/: CMakeLists.txt  DebugInfo.cpp  DebugInfo.hpp  FileCoord.hpp  SymbolStack.cpp  TokenizerTools.hpp
src/lib/auxillary/parsers/: CMakeLists.txt  DebugInfo.cpp  DebugInfo.hpp  Nonterminal.hpp  ParserTools.hpp  Symbol.hpp  SymbolStack.hpp  Terminal.hpp  TokenizerTools.cpp  TokenizerTools.hpp  ValueTerminal.hpp
src/lib/ecs/: CMakeLists.txt  Entity.hpp  EntityManager.cpp  EntityManager.hpp
src/lib/ecs/auxillary/: ComponentHash.hpp  ComponentList.cpp  ComponentList.hpp  IComponentList.cpp  IComponentList.hpp
src/lib/ecs/components/: Camera.hpp  ComponentFlags.hpp  Controllable.hpp  Mesh.hpp  Meshes.hpp  Model.hpp  Textures.hpp  Transform.hpp
src/lib/ecs_new/: EntityManager.cpp  EntityManager.hpp
src/lib/ecs_new/auxillary/: ComponentList.hpp
src/lib/ecs_new/components/: Controllable.hpp  Meshes.hpp  Model.hpp  Transform.hpp
src/lib/ecs_old/: Entity.hpp
src/lib/ecs_old/auxillary/: CMakeLists.txt  ComponentHash.hpp  ComponentList.cpp  IComponentList.hpp
src/lib/ecs_old/components/: Camera.hpp  ComponentFlags.hpp  Textures.hpp
src/lib/loaders/auxillary/: IndexedVertexArray.cpp  IndexedVertexArray.hpp  Vertex.hpp
src/lib/loaders/models/: Formats.hpp
src/lib/materials/: CMakeLists.txt  Material.cpp  Material.hpp  MaterialFormat.hpp  MaterialPool.cpp  MaterialPool.hpp  MaterialSystem.cpp  MaterialSystem.hpp  MaterialType.hpp
src/lib/materials/auxillary/: CMakeLists.txt  ComponentList.cpp  ComponentList.hpp
src/lib/materials/components/: Diffused.hpp  MaterialFlags.hpp  Textured.hpp
src/lib/materials/formats/: CMakeLists.txt
src/lib/materials/textures/: CMakeLists.txt  Texture.cpp  Texture.hpp  TextureFormat.hpp  TexturePool.cpp  TexturePool.hpp
src/lib/materials/variants/: CMakeLists.txt  MaterialType.hpp  SimpleColoured.hpp  SimpleTextured.hpp
src/lib/model_manager/: CMakeLists.txt  ModelFormat.hpp  ModelManager.cpp  ModelManager.hpp  Vertex.cpp  Vertex.hpp
src/lib/model_manager/formats/: CMakeLists.txt
src/lib/models/: CMakeLists.txt  ModelFormat.hpp  ModelSystem.cpp  ModelSystem.hpp
src/lib/models/formats/: CMakeLists.txt
src/lib/models/materials/: MaterialManager.cpp  MaterialManager.hpp
src/lib/object_manager/: CMakeLists.txt  ObjectManager.cpp  ObjectManager.hpp
src/lib/object_manager/objects/: CMakeLists.txt  Object.cpp  Object.hpp  ObjectType.hpp
src/lib/render_engine/: CMakeLists.txt  RenderEngine.cpp  RenderEngine.hpp
src/lib/render_engine/auxillary/: BinaryString.hpp  ErrorCodes.hpp
src/lib/render_engine/commandbuffers/: CommandBuffer.hpp  CommandPool.cpp  CommandPool.hpp
src/lib/render_engine/depthtesting/: DepthStencil.cpp  DepthStencil.hpp
src/lib/render_engine/descriptors/: CMakeLists.txt  DescriptorPool.cpp  DescriptorPool.hpp  DescriptorSet.cpp  DescriptorSet.hpp  DescriptorSetLayout.cpp  DescriptorSetLayout.hpp
src/lib/render_engine/gpu/: GPU.hpp  QueueInfo.hpp  Surface.hpp
src/lib/render_engine/instance/: Instance.hpp
src/lib/render_engine/memory/: Buffer.cpp  Buffer.hpp  Image.cpp  Image.hpp  MemoryPool.cpp  MemoryPool.hpp
src/lib/render_engine/pipeline/: CMakeLists.txt  ColorBlendState.cpp  Pipeline.cpp  Pipeline.hpp  Shader.hpp
src/lib/render_engine/renderpass/: RenderPass.cpp  RenderPass.hpp  Subpass.cpp  Subpass.hpp
src/lib/render_engine/swapchain/: Framebuffer.cpp  Framebuffer.hpp  Swapchain.cpp  Swapchain.hpp
src/lib/render_engine/synchronization/: CMakeLists.txt  Fence.hpp  Semaphore.cpp
src/lib/rendering/: CMakeLists.txt  Index.hpp  RenderSystem.cpp  RenderSystem.hpp  Vertex.cpp  Vertex.hpp
src/lib/rendering/auxillary/: BinaryString.cpp  BinaryString.hpp  CMakeLists.txt  ErrorCodes.hpp  Formats.hpp  ImageLayouts.hpp  Index.hpp  MemoryProperties.hpp  Rectangle.cpp  Rectangle.hpp  ShaderStages.hpp  Vertex.cpp  Vertex.hpp  VulkanSwap.cpp  VulkanSwap.hpp
src/lib/rendering/commandbuffers/: CMakeLists.txt  CommandBuffer.cpp  CommandBuffer.hpp  CommandPool.cpp  CommandPool.hpp
src/lib/rendering/data/: EntityData.hpp  MaterialData.hpp  MeshData.hpp  ObjectData.hpp
src/lib/rendering/depthtesting/: CMakeLists.txt  DepthStencil.cpp  DepthStencil.hpp
src/lib/rendering/descriptors/: DescriptorPool.cpp  DescriptorPool.hpp  DescriptorSet.cpp  DescriptorSet.hpp  DescriptorSetLayout.cpp  DescriptorSetLayout.hpp
src/lib/rendering/gpu/: GPU.cpp  GPU.hpp  QueueInfo.cpp  QueueInfo.hpp  Surface.cpp  Surface.hpp  SwapchainInfo.cpp  SwapchainInfo.hpp
src/lib/rendering/instance/: Instance.cpp  Instance.hpp
src/lib/rendering/memory/: BlockMemoryPool.cpp  BlockMemoryPool.hpp  Buffer.cpp  Buffer.hpp  CMakeLists.txt  Image.cpp  Image.hpp  LinearMemoryPool.cpp  LinearMemoryPool.hpp  MemoryHandle.hpp  MemoryManager.cpp  MemoryManager.hpp  MemoryObject.cpp  MemoryObject.hpp  MemoryPool.cpp  MemoryPool.hpp
src/lib/rendering/memory_manager/: CMakeLists.txt  MemoryManager.cpp  MemoryManager.hpp
src/lib/rendering/memory_old/: Buffer.cpp  Buffer.hpp  CMakeLists.txt  Image.cpp  Image.hpp  MemoryHandle.hpp  MemoryManager.cpp  MemoryManager.hpp  MemoryPool.cpp  MemoryPool.hpp
src/lib/rendering/pipeline/: CMakeLists.txt  ColorBlendState.hpp  (+15 more)
src/lib/textures/: CMakeLists.txt  Texture.hpp  TextureFormat.hpp  TextureSystem.cpp  TextureSystem.hpp
src/lib/tools/: Array.cpp  Array.hpp  AssociativeArray.cpp  AssociativeArray.hpp  CMakeLists.txt  Common.cpp  Common.hpp  CppDebugger.hpp  Freelist.cpp  Freelist.hpp  LinkedArray.cpp  LinkedArray.hpp  Logger.cpp  Logger.hpp  StaticArray.cpp  StaticArray.hpp  StreamOperators.hpp  Tracer.cpp  Tracer.hpp  Typenames.hpp
src/lib/vulkan/: CMakeLists.txt  ErrorCodes.hpp  Formats.hpp  ShaderStages.hpp
src/lib/window/: CMakeLists.txt  Keys.hpp  Window.cpp  Window.hpp
src/lib/world/: CMakeLists.txt  WorldSystem.cpp  WorldSystem.hpp
tests/Array/: CMakeLists.txt  common.hpp  consistancy.cpp  constructors.cpp  initialization.cpp  push_erase.cpp  resize.cpp  test_array.cpp
(+243 files in other folders)
